# WASM-Draw

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  index.html  index.js  index.wasm  main.cpp  makefile
.github/workflows/: deploy.yml
backend/: dockerfile  go.mod  server.go
frontend/: CMakeLists.txt  dockerfile  main.cpp
frontend/html_template/: script.js  styles.css  template.html  websockets.js
frontend/include/drawing/: DrawingCommands.h  DrawingCommandsBindings.h  Shapes.h
frontend/include/game/: GameLoop.h  GameState.h
frontend/src/: main.cpp
frontend/src/drawing/: DrawingCommands.cpp  DrawingCommandsBindings.cpp  Shapes.cpp
frontend/src/game/: GameLoop.cpp  GameState.cpp
frontend/tests/: README.md
frontend/tests/drawing/: DrawingCommandsTest.cpp
html_template/: script.js  styles.css  template.html  websockets.js
